# sdl-testing

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: Animation.h  Animation.hpp  App.h  App.hpp  Camera.h  Camera.hpp  Map.h  Map.hpp  Player.h  Player.hpp  Screen.h  Screen.hpp  Sprite.h  Sprite.hpp  Texture.h  Texture.hpp  Util.h  cmdline.h  cmdline.hpp
include/util/: types.hpp  util.hpp
src/: App.cpp  Camera.cpp  Map.cpp  Player.cpp  Screen.cpp  cmdline.cpp  main.cpp
